# uv_test

./: README.md  init.sh  pyproject.toml  requirements.txt
plots/plots_notebooks/: MATH_general_llms_plots.ipynb  MATH_math_llms_plots.ipynb  gsm8k_general_llms_plots.ipynb  gsm8k_math_llms_plots.ipynb
