[project]
name = "uv_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "ollama-python>=0.1.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
]